// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`getPaginationArrow() Next arrow renders correctly 1`] = `
<i
  class="fas fa-angle-right"
/>
`;

exports[`getPaginationArrow() Prev arrow renders correctly 1`] = `
<i
  class="fas fa-angle-left"
/>
`;

exports[`getPaginationItem() Active page rendered correctly 1`] = `
<li
  class="page-item"
>
  <a
    class="page-link active"
    href="#"
  >
    1
  </a>
</li>
`;

exports[`getPaginationItem() Renders correctly 1`] = `
<li
  class="page-item"
>
  <a
    class="page-link"
    href="#"
  >
    1
  </a>
</li>
`;

exports[`getPaginationItemArrow() Left item renders correctly 1`] = `
<li
  class="page-item"
>
  <a
    class="page-link"
    href="#"
  >
    <i
      class="fas fa-angle-left"
    />
  </a>
</li>
`;

exports[`getPaginationItemArrow() Right item renders correctly 1`] = `
<li
  class="page-item"
>
  <a
    class="page-link"
    href="#"
  >
    <i
      class="fas fa-angle-right"
    />
  </a>
</li>
`;

exports[`getPaginationItemRest() Renders correctly 1`] = `
<li
  class="page-item"
>
  <span
    class="page-link"
  >
    ...
  </span>
</li>
`;
